<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcomePong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcomePong"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" >
    </TextView>

    <com.avv.pong.view.ui.AnimatedButton
        android:id="@+id/bNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tNewGame"
        android:layout_below="@id/welcomePong"
        android:layout_marginTop="20dp"/>

    <com.avv.pong.view.ui.AnimatedButton
        android:id="@+id/bSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tSettings" 
        android:layout_below="@id/bNewGame"
        android:layout_marginTop="20dp"/>

    <com.avv.pong.view.ui.AnimatedButton
        android:id="@+id/bControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tControls" 
        android:layout_below="@id/bSettings"
        android:layout_marginTop="20dp"/>

</RelativeLayout>