<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/titleMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tControls"
        android:textSize="22sp"
        android:textStyle="bold" >
    </TextView>

    <RadioGroup
        android:id="@+id/rControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleMenu"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >

        <RadioButton
            android:id="@+id/cFinger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cFinger" />

        <RadioButton
            android:id="@+id/cSensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cSensor"
            android:layout_marginLeft="20dp" />
    </RadioGroup>

</RelativeLayout>