<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/titleMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Opciones"
        android:textSize="22sp"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/tvDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleMenu"
        android:layout_marginTop="20dp"
        android:text="@string/rDifficulty"
        android:textSize="14sp" >
    </TextView>

    <RadioGroup
        android:id="@+id/rDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDifficulty"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Baja" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normal" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alta" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvLifes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rDifficulty"
        android:layout_marginTop="20dp"
        android:text="@string/rLifes"
        android:textSize="14sp" >
    </TextView>

    <RadioGroup
        android:id="@+id/rLifes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLifes"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rLifes3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="3" />

        <RadioButton
            android:id="@+id/rLifes5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5" />

        <RadioButton
            android:id="@+id/rLifes7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7" />
    </RadioGroup>

    <Button
        android:id="@+id/bCustomize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rLifes"
        android:layout_marginTop="20dp"
        android:text="@string/tCustomize" />

</RelativeLayout>